// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Left Sidebar should show ul of sidebar closed 1`] = `
<pf-layout-wrapper-left-sidebar
  clientAppRoot={[Function String]}
  companyName={[Function String]}
  enableCoreJdmInClient="false"
  layoutStore={[Function Store]}
  leftSidebarNavigationLinks$={[Function Store]}
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  reload={[Function EventEmitter]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  userContextSubscription={[Function Subscriber]}
  userId={[Function Number]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
  >
    
  </ul><div
    class="left-sidebar-footer left-sidebar-footer-close"
  >
    <div
      class="left-sidebar-icon-close"
    >
      
      
      <span>
        <fa-icon
          size="lg"
        />
      </span>
    </div>
  </div>
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should show ul of sidebar open 1`] = `
<pf-layout-wrapper-left-sidebar
  clientAppRoot={[Function String]}
  companyName={[Function String]}
  enableCoreJdmInClient="false"
  layoutStore={[Function Store]}
  leftSidebarNavigationLinks$={[Function Store]}
  leftSidebarToggle={[Function Boolean]}
  ngAppRoot={[Function String]}
  reload={[Function EventEmitter]}
  settingsService={[Function SettingsService]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  userContextSubscription={[Function Subscriber]}
  userId={[Function Number]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-open"
  >
    
  </ul><div
    class="left-sidebar-footer left-sidebar-footer-open"
  >
    <div
      class="left-sidebar-icon-open"
    >
      
      <span>
        <fa-icon
          size="lg"
        />
      </span>
      
    </div>
  </div>
</pf-layout-wrapper-left-sidebar>
`;
